Spotlight, screen content organization

--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -1,4 +1,11 @@
 <div class="layout">
-    <app-title></app-title>
+    <div class = "row">
+        <div class = "column" style="flex: 40;">
+            <app-title></app-title>
+        </div>
+        <div class = "column" style="flex: 60;">
+            <p>TEST COLUMN</p>
+        </div>
+    </div>
 </div>
 
