--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,5 +1,5 @@
 <div class = 'title-box'>
     <div class = 'h1'> {{this.name}} </div>
-    <div class = 'p'> {{this.role}} </div>
-    <div class = 'p'> {{this.desc}} </div>
+    <div class = 'h2'> {{this.role}} </div>
+    <div class = 'h3'> {{this.desc}} </div>
 </div>
