added about me to rhs, more formatting

--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -1,10 +1,12 @@
 <div class="layout">
     <div class = "row">
-        <div class = "column" style="flex: 40;">
+        <div class = "column" style="flex: 45;">
             <app-title></app-title>
         </div>
-        <div class = "column" style="flex: 60;">
-            <p>TEST COLUMN</p>
+        <div class = "column" style="flex: 55;">
+            <div style="overflow: auto;">
+                <app-about-me></app-about-me>
+            </div>
         </div>
     </div>
 </div>
