--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -1,11 +1,18 @@
 <div class="layout">
-    <div class = "row">
-        <div class = "column" style="flex: 45;">
-            <app-title></app-title>
+    <div class="row">
+        <div class = "columnLeft" style="width: 45%;">
+            <div style="height: 100%;">
+                <app-title></app-title>
+                <app-bottom-icons></app-bottom-icons>
+            </div>
+            
         </div>
-        <div class = "column" style="flex: 55;">
-            <div style="overflow: auto;">
-                <app-about-me></app-about-me>
+        <div class = "columnRight" style="width: 55%;">
+            <div style="height: max-content;">
+                <div style="overflow: auto;">
+                    <app-about-me></app-about-me>
+                    
+                </div>
             </div>
         </div>
     </div>
