--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,11 @@ body {
     width: 1000px;
     height: 1000px;
     border-radius: 50%;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.025) 10%, rgba(255, 255, 255, 0.001) 80%);
-    pointer-events: none; /* allows click events to pass through */
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.03) 10%, rgba(255, 255, 255, 0.001) 80%);
+    pointer-events: none;
     transform: translate(-50%, -50%);
 
-    z-index: 2; /* ensure it's on top */
+    z-index: 2;
   }
   div {
     z-index: 3;
@@ -23,3 +23,6 @@ body {
     color:#333333
   }
   
+  html {
+    scroll-behavior: smooth;
+}
