--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,3 +1,13 @@
-<div class = "about">
+<div class = "about" id="about">
+    {{this.text}}
+ </div>
+ <div class = "about" id="experience">
+    {{this.text}}
+    {{this.text}}
+    {{this.text}}
+ </div>
+ <div class = "about" id="projects">
+    {{this.text}}
+    {{this.text}}
     {{this.text}}
  </div>
