--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -1,18 +1,16 @@
 <div class="layout">
     <div class="row">
-        <div class = "columnLeft" style="width: 40%;">
+        <header class = "columnLeft" style="width: 40%;">
             <div style="height: 100%;">
                 <app-title></app-title>
                 <app-navigation></app-navigation>
                 <app-bottom-icons></app-bottom-icons>
             </div>
-        </div>
+        </header>
         <div class = "columnRight" style="width: 55%;">
             <div style="height: max-content;">
-                <div style="overflow: auto;">
                     <app-about-me></app-about-me>
-                    
-                </div>
+                    <app-experience></app-experience>
             </div>
         </div>
     </div>
