--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,6 +3,6 @@
     z-index: 3;
     font-family: sans-serif;
     color: #839e89;
-    font-size: 15px;
-    width: 80%;
+    font-size: 16px;
+    margin-bottom: 96px;
 }
