about-me update

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,3 +1,6 @@
-<div class = "about">
-    {{this.text}}
+<div class = "about-me">
+    {{this.p1}}
+    {{this.p2}}
+    {{this.p3}}
+    {{this.p4}}
  </div>
