--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,9 +1,17 @@
 
-    .about {
+    .about-me {
         line-height: 150%;
         z-index: 3;
         font-family: sans-serif;
         color: #839e89;
         font-size: 15px;
         width: 80%;
+        word-spacing: 0.1rem;
+        line-height: 1.4;
     }
+
+    .column-container {
+        display: flex;
+        flex-direction: column; /* Stacks children vertically */
+        gap: 1rem; /* Optional: adds space between items */
+      }
