Sticky Left Column update

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class = "about" id="about">
-    {{this.p1}}
-    {{this.p2}}
-    {{this.p3}}
-    {{this.p4}}
- </div>
+    <div>{{this.p1}}</div>
+    <div>{{this.p2}}</div>
+    <div>{{this.p3}}</div>
+    <div>{{this.p4}}</div>
+</div>
