--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -1,11 +1,11 @@
 <div class="layout">
     <div class="row">
         <header class = "columnLeft" style="width: 40%;">
-            <div style="height: 100%;">
+            <div>
                 <app-title></app-title>
                 <app-navigation></app-navigation>
-                <app-bottom-icons></app-bottom-icons>
             </div>
+                <app-bottom-icons></app-bottom-icons>
         </header>
         <div class = "columnRight" style="width: 55%;">
             <div style="height: max-content;">
