added resume, fixed anchor tagging scroll alignment

--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -8,9 +8,12 @@
                 <app-bottom-icons></app-bottom-icons>
         </header>
         <div class = "columnRight" style="width: 55%;">
-            <div style="height: max-content;">
-                    <app-about-me></app-about-me>
-                    <app-experience></app-experience>
+            <app-about-me></app-about-me>
+            <app-experience></app-experience>
+            <div class="resume-link">
+                <a href="../../../public/resume.pdf" target="_blank" class="resume-text"> 
+                    <div class="img-hover"></div>  View Full Resum&eacute;
+                </a>
             </div>
         </div>
     </div>
