removed extended url path for resume

--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -11,7 +11,7 @@
             <app-about-me></app-about-me>
             <app-experience></app-experience>
             <div class="resume-link">
-                <a href="../../../public/resume.pdf" target="_blank" class="resume-text"> 
+                <a href="resume.pdf" target="_blank" class="resume-text"> 
                     <div class="img-hover"></div>  View Full Resum&eacute;
                 </a>
             </div>
