fixed resume url, added init commit for projects, fixed styling issue in experience blocks

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,4 +1,4 @@
-.job-block {
+.project-block {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -8,46 +8,45 @@
     transition: opacity 0.3s ease; /* Smooth transition for opacity */
     opacity: 1;
 }
-.job-block:hover {
+.project-block:hover {
     background-color: #283f38;
     transition: all 0.3s ease;
 }
 
-/* Make all non-hovered job-blocks opaque when one is hovered */
-.experience:hover .job-block {
-    opacity: 0.5; /* Reduce opacity for all job-blocks */
+/* Make all non-hovered project-blocks opaque when one is hovered */
+.project:hover .project-block {
+    opacity: 0.5; /* Reduce opacity for all project-blocks */
 }
 
-.experience:hover .job-block:hover {
-    opacity: 1; /* Keep the hovered job-block fully visible */
-    
-    .job-block-title a {
+.project:hover .project-block:hover {
+    opacity: 1; /* Keep the hovered project-block fully visible */
+    .project-block-title a {
         color: #83e04a;
         transition: all 0.3s ease;
     }
 }
 
-.job-block-date {
+.project-block-date {
     width: 25%;
     font-size: 14px;
     color: #839e89;
     flex-shrink: 0;
     padding-right: 24px;
 }
-.job-block-title {
+.project-block-title {
     font-size: 18px;
     color: #cad2c5;
     font-family: sans-serif;
     font-weight: bold;
 }
 
-.job-block-title a {
+.project-block-title a {
     text-wrap: nowrap;
     font-family: sans-serif;
     color: #cad2c5;
     text-decoration: none;
 }
-.job-block-description {
+.project-block-description {
     font-size: 14px;
     color: #839e89;
     font-family: sans-serif;
@@ -59,7 +58,7 @@ span {
     font-family: sans-serif;
 }
 
-.job-block-tech {
+.project-block-tech {
     display: flex;
     justify-content: start;
 }
