--- a/src/app/screen-layout/screen-layout.component.html
+++ b/src/app/screen-layout/screen-layout.component.html
@@ -10,11 +10,12 @@
         <div class = "columnRight" style="width: 55%;">
             <app-about-me></app-about-me>
             <app-experience></app-experience>
-            <div class="resume-link">
+            <div class="resume-link" style="margin-bottom: 96px;">
                 <a href="resume.pdf" target="_blank" class="resume-text"> 
                     <div class="img-hover"></div>  View Full Resum&eacute;
                 </a>
             </div>
+            <app-projects></app-projects>
         </div>
     </div>
 </div>
