--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,28 @@
 <div class = "about" id="about">
-    <div>{{this.p1}}</div>
-    <div>{{this.p2}}</div>
-    <div>{{this.p3}}</div>
-    <div>{{this.p4}}</div>
+    <div style="margin-bottom: 8px;">{{this.p1}}</div>
+    <div style="margin-bottom: 8px;">
+        <span>{{this.p2}}</span>
+        <a href="https://www.utdallas.edu/" target="_blank" class="link"> {{this.p2Link}}</a>
+        <span>{{this.p2_2}}</span>
+        <a href="https://www.databricks.com/" target="_blank" class="link">{{this.p2Link_2}}</a>,
+        <a href="https://azure.microsoft.com/en-us/products/kubernetes-service" target="_blank" class="link">{{this.p2Link_3}}</a>, and
+        <a href="https://azure.microsoft.com/en-us/products/data-factory" target="_blank" class="link">{{this.p2Link_4}}</a>.
+        <span>{{this.p2_3}}</span>
+    </div>
+    <div style="margin-bottom: 8px;">
+        <span>{{this.p3}}</span>
+        <a href="https://jobs.aa.com/go/ITAdept/9297300/" target="_blank" class="link"> {{this.p3Link}}</a>
+        <span>{{this.p3_2}}</span>
+    </div>
+    <div style="margin-bottom: 8px;">{{this.p4}}</div>
+    <div>
+        <span>{{this.p5}}</span>
+            <span class="hover-element" (mouseenter)="playAudio()" (mouseleave)="stopAudio()">
+                {{this.p5Link}}
+            </span>
+            <audio #audioPlayer>
+                <source src="audio-file.mp3" type="audio/mpeg" />
+                Your browser does not support the audio element.
+            </audio>
+    </div>
 </div>
