--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -6,3 +6,13 @@
     font-size: 16px;
     margin-bottom: 96px;
 }
+.link {
+    color: #cad2c5;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-weight: 550;
+    &:hover {
+        color: #83e04a;
+        transition: all 0.3s ease;
+    }
+}
