updated icon links

--- a/src/app/bottom-icons/bottom-icons.component.html
+++ b/src/app/bottom-icons/bottom-icons.component.html
@@ -1,11 +1,11 @@
 <div class="bottom-icons">
-    <a href="https://www.instagram.com/tminchew/" target="_blank">
+    <a href="https://www.instagram.com/tommoose_minchew/" target="_blank">
         <img src="instagram.png" alt="Instagram" class="icon" />
     </a>
     <a href="https://www.github.com/Tminchew" target="_blank">
         <img src="github.png" alt="GitHub" class="icon" />
     </a>
-    <a href="https://www.linkedin/thomas-minchew" target="_blank">
+    <a href="https://www.linkedin.com/in/thomas-minchew/" target="_blank">
         <img src="linkedin.png" alt="LinkedIn" class="icon" />
     </a>  
 </div>
