added new project, fixed text wrapping on experience and projects tags

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -7,7 +7,7 @@
             <div>
                 <div class="project-block-title">
                     <span>
-                        <a class="project-title" href="{{project.url}}" target="_blank">{{project.title}} - {{project.company}} </a>    
+                        <a class="project-title" href="{{project.url}}" target="_blank">{{project.title}}</a>    
                         <div class="arrow">
                             <div class="arrow-top"></div>
                             <div class="arrow-bottom"></div>
